fix: Simplified the workflow to use only jpackage directly. Updated README